@@ -2289,6 +2289,16 @@ Note: these functions are experimental and their interface might change in futur
 versions.
 @end deftypefun
 
+@deftypefun int mpfr_cosu (mpfr_t @var{rop}, mpfr_t @var{op}, unsigned long @var{u}, mpfr_rnd_t @var{rnd})
+@deftypefunx int mpfr_sinu (mpfr_t @var{rop}, mpfr_t @var{op}, unsigned long @var{u}, mpfr_rnd_t @var{rnd})
+@deftypefunx int mpfr_tanu (mpfr_t @var{rop}, mpfr_t @var{op}, unsigned long @var{u}, mpfr_rnd_t @var{rnd})
+Set @var{rop} to the cosine (resp. sine and tangent) of @m{@var{op} \times \pi,@var{op} multiplied by @tie{}Pi}. See the description of @code{mpfr_sinu},
+@code{mpfr_cosu} and @code{mpfr_tanu} for special values.
+
+Note: these functions are experimental and their interface might change in future
+versions.
+@end deftypefun
+
 @deftypefun int mpfr_sin_cos (mpfr_t @var{sop}, mpfr_t @var{cop}, mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 Set simultaneously @var{sop} to the sine of @var{op} and @var{cop} to the
 cosine of @var{op}, rounded in the direction @var{rnd} with the corresponding
