@@ -1,4 +1,5 @@
-/* mpfr_sinu -- sinu(x) = sin(2*pi*x/u)
+/* mpfr_sinu  -- sinu(x) = sin(2*pi*x/u)
+   mpfr_sinpi -- sinpi(x) = sin(pi*x)
 
 Copyright 2020 Free Software Foundation, Inc.
 Contributed by the AriC and Caramba projects, INRIA.
@@ -188,4 +189,10 @@ mpfr_sinu (mpfr_ptr y, mpfr_srcptr x, unsigned long u, mpfr_rnd_t rnd_mode)
   mpfr_clear (t);
   MPFR_SAVE_EXPO_FREE (expo);
   return underflow ? inexact : mpfr_check_range (y, inexact, rnd_mode);
+}
+
+int
+mpfr_sinpi (mpfr_ptr y, mpfr_srcptr x, mpfr_rnd_t rnd_mode)
+{
+  return mpfr_sinu (y, x, 2, rnd_mode);
 }
